package com.sd.laborator.persistence.entities

class BookEntity(
    var id: Int,
    var name: String,
    var author: String,
    var publisher: String,
    var content: String
)
